media/main.css
/* ... */
.quickview-header .title {
  color: var(--vscode-editor-foreground);
}

.quickview-header .delete::before,
.quickview-header .delete::after
{
  background-color: var(--vscode-editor-foreground);
}

.quickview-block {
  --shiki-color-background: var(--vscode-editor-background);
}

.quickview-footer {
  background-color: var(--vscode-sideBar-background);
  border-top: 1px solid var(--vscode-panel-border);
}

/* ****************************************************************************
 * Trace loading indicator
 * **************************************************************************** */

 .pageloader {
   background-color: var(--vscode-sideBar-background);
 }

 .pageloader .title {
   color: var(--vscode-foreground);
 }

/* ****************************************************************************
 * Inline collapsible rule rendering
 * **************************************************************************** */

#message-pane .rule-inline pre
{
  font-size: 1em;
}

/* ****************************************************************************
 * 
 * **************************************************************************** */

.poptip {
  display: inline-block;
  background: var(--vscode-sideBar-background);
  border-radius: 4px;
  display: none;
  z-index: 2048;
}

.poptip[data-show] {
  display: block;
}

#arrow,
#arrow::before {
  position: absolute;
  width: 8px;
  height: 8px;
  background: inherit;
}

#arrow {
  visibility: hidden;
}

#arrow::before {
  visibility: visible;
  content: '';
  transform: rotate(45deg);
}

